# patchr

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  colab_server.ipynb  pyproject.toml  server.py
.claude/: settings.json
docs/: prediction.md
examples/inpainting/: 1A1B_chainABCD.cif  1A1B_chainACBD.cif  1AYB_chainAB.cif  1BNA.cif  1BNA_chainAB.cif  1CK4.cif  1CK4_chainA.cif  1CK4_chainAB.cif  1CK4_chainA_uniprot.cif  1DE9_chainABCGI.cif  1DE9_chainGHCGIJ.cif  1TON.cif  1TON_chainAB.cif  1TON_chainAB_uniprot.cif  1a1b_ABCD.yaml  1a1b_ACBD.yaml  1a1b_ACBD_inpainting_metadata.json  1ayb_AB.yaml  1ayb_AB_inpainting_metadata.json  1bna.yaml  1bna_AB.yaml  1ck4.yaml  1ck4_A.yaml  1ck4_AB.yaml  1ck4_AB_inpainting_metadata.json  1ck4_A_inpainting_metadata.json  1ck4_A_uniprot.yaml  1ck4_A_uniprot_inpainting_metadata.json  1ck4_inpainting_metadata.json  1de9_ABCGI.yaml  1de9_GHCGIJ.yaml  1de9_GHCGIJ_inpainting_metadata.json  1ton.yaml  1ton_AB.yaml  1ton_AB_inpainting_metadata.json  1ton_AB_uniprot.yaml  1ton_AB_uniprot_inpainting_metadata.json  1ton_inpainting_metadata.json  2CV5_chainALL_23chains.cif  2FCI_chainAB.cif  (+88 more)
examples/inpainting_test/: 2HWL_CHAINABCDEFGH_chainABCDEFGH.cif  2hwl_chainabcdefgh_ABCDEFGH.yaml
examples/inversion/: 1de9.yaml  1de9_GABC_model_0.cif  1mms.yaml  1mms_CA_model_0.cif  1ton_A.yaml  1ton_A_control.yaml  1ton_A_model_0.cif  9cp0.yaml  9cp0_AB_model_0.cif  9cp0_control.yaml  9cp0_model_0.cif  9h1g_A.yaml  9h1g_A_control.yaml  9h1g_a_A_model_0.cif
protenix_configs/: configs_base.py  configs_inference.py
protenix_runner/: batch_inference.py  cif_postprocess.py  dumper.py  inference.py  rna_msa_search.py  template_search.py  train.py
runner/: batch_inference.py  inference.py  train.py
scripts/: analyze_residue_gaps.py  docker-push.sh  docker-run.sh  generate_inpainting_template.py  slurm-run.sh
scripts/benchmark/: README.md  generate_dataset.py  generate_yaml.py
scripts/inpainting/: __init__.py  ccd_utils.py  cif_writer.py  constants.py  extract_fasta_from_cif.py  json_writer.py  main.py  structure_processor.py  yaml_writer.py
scripts/inpainting/processor/: __init__.py  alignment.py  assembly.py  atom_parse.py  base.py  chain_discovery.py  chain_mapping.py  cif_io.py  log.py  modifications.py  sequence_extract.py  sequence_fetch.py  validation.py
scripts/process/: mmcif.py
src/boltz/: main.py  membrane.py  patchr_cli.py  server.py  sim_ready.py
src/boltz/data/: types.py
src/protenix/data/: utils.py
studio/: .env.example  README.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.web.tsbuildinfo
studio/docs/: DOC_GUIDELINES.md  INDEX.md  PATCHR_STUDIO_FEATURES.md
studio/scripts/: release.sh
tests/: test_regression.py  test_server.py
(+120 files in other folders)
