[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patchr"
version = "1.0.0"
requires-python = ">=3.11,<3.13"
description = "PATCHR — diffusion-based structure completion for proteins, DNA, RNA, and complexes"
readme = "README.md"
dependencies = [
    # Core
    "torch>=2.2",
    "numpy>=1.26,<2.0",
    "pytorch-lightning>=2.5.0",
    "scipy>=1.13.1",
    "click>=8.1.7",
    "rich-click>=1.7.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",

    # Structure / chemistry
    "rdkit>=2024.3.2",
    "biopython>=1.84",
    "gemmi>=0.6.5",
    "modelcif>=1.2",
    "chembl_structure_pipeline>=1.2.2",

    # ML utilities
    "hydra-core>=1.3.2",
    "einops>=0.8.0",
    "einx>=0.3.0",
    "fairscale>=0.4.13",
    "mashumaro>=3.14",
    "wandb>=0.18.7",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.2",
    "matplotlib>=3.7.0",
    "dm-tree>=0.1.8",
    "types-requests",

    # Performance (platform-specific)
    "trifast>=0.1.11; platform_system == 'Linux'",
    "numba>=0.60.0; platform_system != 'Darwin'",
    "tensorboard>=2.19.0; platform_system == 'Darwin'",

    # CUDA kernels (silently skipped if no CUDA)
    "cuequivariance_ops_cu12>=0.5.0",
    "cuequivariance_ops_torch_cu12>=0.5.0",
    "cuequivariance_torch>=0.5.0",

    # Server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "gunicorn>=21.2.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",

    # Protenix
    "ml-collections>=0.1.1",
    "biotite>=1.4.0",
    "fair-esm==2.0.0",
    "optree>=0.13.0",
    "pdbeccdutils>=0.8.5",
    "ninja",

    # Simulation preparation
    "openmm>=8.0",
    "pdbfixer>=1.9",
    "parmed>=4.0",
]

[project.scripts]
patchr = "boltz.patchr_cli:cli"
boltz = "boltz.main:cli"

[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest", "requests"]

[tool.ruff]
src = ["src"]
extend-exclude = ["conf.py"]
target-version = "py310"
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # Conflicts with the formatter
    "ISC001",  # Conflicts with the formatter
    "ANN101",  # "missing-type-self"
    "RET504",  # Unnecessary assignment before return
    "S101",    # Use of assert
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "PT001",
    "PT004",
    "PT005",
    "PT023",
    "FBT001",
    "FBT002",
    "PLR0913", # Too many arguments
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"docs/**" = ["INP001"]
"scripts/**" = ["INP001"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "regression",
]
